# Arcturus

./: .gitignore  Dockerfile  Dockerfile.scripts  Dockerfile.web  README.md  TODOS.md  bun.lockb  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json
apps/api/: .gitignore  Cargo.toml  Dockerfile
apps/api/.shuttle/: config.toml
apps/api/public/: 0afe99b8-d404-4962-bce6-b62727eef534.md  0c7dcaeb-3d62-48cb-b390-12f7f4c75ade.md  1e47b4cd-9d90-42d0-838e-7b5fb0314a9b.md  33b716d5-f6c5-4a22-8e41-3f3878c87b27.md  39db0efa-fc46-4563-a77d-3822554d70ae.md  4e266285-13c0-48a0-9d43-9fe1548676ad.md  c9a061c1-e7bb-44f0-b9ab-09a76d6c8c8a.md  e58a6cbf-65b8-4fa0-b8da-b286a6410e2c.md  index.html
apps/api/src/: main.rs
apps/api/src/config/api/info/: mod.rs
apps/api/src/database/: mod.rs
apps/api/src/log/: mod.rs
apps/api/src/models/: mod.rs
apps/api/src/models/orms/: mod.rs
apps/api/src/models/orms/posts/: mod.rs
apps/api/src/models/orms/traits/: mod.rs
apps/api/src/models/response/: mod.rs
apps/api/src/routes/: mod.rs
apps/api/src/routes/events/: mod.rs
apps/api/src/routes/health/: mod.rs
apps/api/src/routes/info/: mod.rs
apps/api/src/routes/posts/: mod.rs
apps/api/src/services/: mod.rs
apps/api/src/services/api/: mod.rs
apps/api/src/services/file/: mod.rs
apps/api/src/services/health/: mod.rs
apps/api/src/util/: mod.rs
apps/api/src/util/fs/: mod.rs
apps/api/src/util/res/: mod.rs
database/: docker-compose.yml  init.sql
nginx/: docker-compose.yml  nginx.conf
posts/: .markdownlint.json  0afe99b8-d404-4962-bce6-b62727eef534.md  (+26 more)
(+223 files in other folders)
