[package]
name = "project-arcturus-file-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
actix-files = "0.6.6"
serde_json = "1.0.133"
serde = { version = "1.0.216", features = ["derive"] }
debugrs = "0.2.0"
dotenv = "0.15.0"
glob = "0.3.1"
pulldown-cmark = "0.12.2"
futures-util = "0.3.31"
tokio = { version = "1.42.0", features = ["full"] }
sqlx = { version = "0.8.2", features = [
    "postgres",
    "runtime-tokio-native-tls",
    "macros",
    "time",
] }
chrono = "0.4.39"
actix-cors = "0.7.0"
